# dot

./: .gitignore  README.md  meson.build  pyproject.toml
dot/: __init__.py  _ops.py  bidirectional_softmax.py  sinkhorn.py
src/bidirectional_softmax/: kernels.cu  kernels.cuh  kernels_cpu.cpp  kernels_cpu.h  registry.cpp  torch_cpu.cpp  torch_cuda.cpp
src/common/: cuda_utils.h  torch_utils.h
src/sinkhorn/: kernels.cu  kernels.cuh  kernels_cpu.cpp  kernels_cpu.h  registry.cpp  torch_cpu.cpp  torch_cuda.cpp
tests/: test_bidirectional_softmax.py  test_sinkhorn.py
